# sup

./: .gitignore  Cargo.toml  GUIDE.md  README.md  book.toml  build.rs
.github/workflows/: clippy.yml  rust.yml
docs/: chapter_1.html  index.html  print.html
src/: conf.rs  config.rs  lib.rs  msg.rs  registry.rs  result.rs
src/cmd/: config.rs  list.rs  mod.rs  new.rs  source.rs  switch.rs  tag.rs  update.rs  upgrade.rs
src/cmds/: init.rs  mod.rs  new.rs
src/registry/: manifest.rs  mod.rs  node_template.rs  redep.rs  tags.rs
