[package]
name = "sup"
version = "0.0.3"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "Substrate package manager"
repository = "https://github.com/clearloop/sup"
license = "MIT"
documentation = "https://docs.rs/sup"
homepage = "https://github.com/clearloop/sup"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
]
keywords = ["substrate"]
readme = './README.md'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sup"
path = "src/bin/sup.rs"

# deps
[dependencies]
structopt = "0.3.14"
toml = "0.5.6"

[dependencies.etc]
version = "0.1.7"
features = ["serde-tree"]

# build deps
[build-dependencies]
toml = "0.5.6"
gita = "0.0.2"

[build-dependencies.etc]
version = "0.1.7"
features = ["serde-tree"]

