[package]
name = "sup"
version = "0.2.11"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "Substrate package manager"
repository = "https://github.com/clearloop/sup"
license = "MIT"
documentation = "https://docs.rs/sup"
homepage = "https://github.com/clearloop/sup"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
  "GUIDE.md",
]
keywords = ["substrate"]
readme = './README.md'

[[bin]]
name = "sup"
path = "src/bin/sup.rs"

[dependencies]
dirs = "3.0.1"
etc = "0.1.16"
structopt = "0.3.14"
toml = "0.5.6"

[dependencies.serde]
version = "1"
features = ["derive"]

[profile.release]
codegen-units=1
